<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/normal_title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="30dp"-->
                <!--android:text="@string/caigoudingdan"-->
                <!--android:textSize="@dimen/adapter_font_size"-->
                <!--android:gravity="center_vertical"/>-->
            <!--<TextView-->
                <!--android:id="@+id/caigoudingdan"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_marginLeft="6dp"-->
                <!--android:text=""-->
                <!--android:textSize="@dimen/adapter_font_size" />-->

        <!--</LinearLayout>-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/danjubianhao"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_order_number"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/shenlingdanhao"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_apply_number"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/use_unit"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_use_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/apply_unit"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_apply_unit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/zijinlaiyuan"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_funds_source"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/yongtu"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_use"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/shangjishenpi"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_superior"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/id_btn_submit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:background="@drawable/btn_shape_orange"
                android:gravity="center_vertical|center"
                android:text="@string/tijiao"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/id_btn_split"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:background="@drawable/btn_shape_orange"
                android:gravity="center_vertical|center"
                android:text="@string/chaidan"
                android:textColor="@android:color/white"/>

        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp">-->
            <!--<Spinner-->
                <!--android:id="@+id/btn_sel"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->

                <!--android:layout_margin="6dp"-->
                <!--android:background="@drawable/btn_shape_orange"-->
                <!--android:gravity="center_vertical|center"-->
                <!--android:text="@string/save"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:entries="@array/spinarr"/>-->

        <!--</LinearLayout>-->

    </LinearLayout>


</LinearLayout>

