<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/mine_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/white" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="@string/loginaccount"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="zhanghao"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="@string/versions"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="1.0.0"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="@string/feedback"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/mail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/mine_font_size"
            android:text="mail@qq.com"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_corner_bg"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/outlogin"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>