<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/wuliaobianma"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_encode"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wuliaomiaoshu"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="6dp"
                android:text="个人观点个如何如何发的那份孤独的风格和惹人厌认同他的后人发动机有条件的"
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/unit"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_unit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/jieshoushuliang"
                android:textSize="@dimen/adapter_font_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/id_received_num"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textSize="@dimen/adapter_font_size" />

        </LinearLayout>
    </LinearLayout>




</LinearLayout>
